Remove extra padding on feed (bug 1068327)

--- a/src/media/css/feed.styl
+++ b/src/media/css/feed.styl
@@ -61,17 +61,6 @@ $grameenphone_color = #00ACE7;
 
 }
 
-// TODO: Fix these properly with the feed.styl refactor.
-@media (min-width: 640px) and (max-width: 1024px) {
-    // Address top-margin clip.
-    body[data-page-type~="homepage"] ul.feed,
-    .feed.collection-landing,
-    .brand-landing .feed-brand .feed-tile-header-wrap,
-    .shelf-landing ul.feed {
-       margin-top: 48px;
-    }
-}
-
 [data-page-type~="homepage"] ul.feed {
     margin-top: 4px;
     opacity: 0;  // Fade-in.
